--- a/TolyID/Resources/Styles/Colors.xaml
+++ b/TolyID/Resources/Styles/Colors.xaml
@@ -13,6 +13,8 @@
     <Color x:Key="SecondaryDarkText">#9880e5</Color>
     <Color x:Key="Tertiary">#2B0B98</Color>
 
+    <Color x:Key="Background">#F2F4F8</Color>
+
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
     <Color x:Key="Magenta">#D600AA</Color>
