--- a/TolyID/Resources/Styles/Styles.xaml
+++ b/TolyID/Resources/Styles/Styles.xaml
@@ -30,7 +30,7 @@
     </Style>
 
     <Style x:Key="FrameEntradaDeDados" TargetType="Frame">
-        <Setter Property="BorderColor" Value="{StaticResource Primary}"/>
+        <Setter Property="BorderColor" Value="Transparent"/>
         <Setter Property="Padding" Value="15, 3, 0, 0"/>
         <Setter Property="HeightRequest" Value="50"/>
         <Setter Property="Margin" Value="0, 0, 0, 5"/>
