--- a/TolyID/MVVM/Views/TatusCadastradosView.xaml
+++ b/TolyID/MVVM/Views/TatusCadastradosView.xaml
@@ -19,24 +19,21 @@
     <ContentPage.Resources>
 
         <DataTemplate x:Key="ListaDeTatusTemplate">
-            <Frame Margin="0, 10, 0, 10" CornerRadius="20" HeightRequest="150" BorderColor="Transparent" InputTransparent="True">
-                <Grid RowDefinitions="*, *" ColumnDefinitions="4*, 6*"
-                      RowSpacing="10" ColumnSpacing="10">
-                    <Frame Grid.RowSpan="2" CornerRadius="15" BorderColor="{StaticResource Primary}">
-                        <Image Source="icone_tatu.png" Scale="1"/>
-                    </Frame>
-                    <Label Text="{Binding IdentificacaoAnimal, StringFormat='ID: {0}'}" 
+            <Frame Margin="0, 10, 0, 10" CornerRadius="20" HeightRequest="90" BorderColor="Transparent" InputTransparent="True" Padding="20, 10, 15, 10">
+                <Grid RowDefinitions="*, *" ColumnDefinitions="6*, 4*" ColumnSpacing="10">
+
+
+                    <Label Text="{Binding IdentificacaoAnimal, StringFormat='Id: {0}'}" 
                            TextColor="{StaticResource Primary}"
                            FontAttributes="Bold"
-                           Grid.Column="1" 
-                           FontSize="20" 
+                           FontSize="18" 
                            VerticalOptions="Center"/>
+
                     <Label Text="{Binding NumeroMicrochip, StringFormat='Chip: {0}'}"
                            TextColor="{StaticResource Primary}"
                            FontAttributes="Bold"
-                           Grid.Column="1" 
                            Grid.Row="1" 
-                           FontSize="20" 
+                           FontSize="18" 
                            VerticalOptions="Center">
 
                         <Label.Triggers>
@@ -46,6 +43,11 @@
                         </Label.Triggers>
 
                     </Label>
+
+                    <Frame Grid.Column="1" Grid.RowSpan="2" Margin="9" BorderColor="{StaticResource Primary}">
+                        <Image Source="icone_tatu.png" Scale="5"/>
+                    </Frame>
+                    
                 </Grid>
             </Frame>
         </DataTemplate>
