--- a/TolyID/MVVM/Views/TatusCadastradosView.xaml
+++ b/TolyID/MVVM/Views/TatusCadastradosView.xaml
@@ -19,43 +19,58 @@
     <ContentPage.Resources>
 
         <DataTemplate x:Key="ListaDeTatusTemplate">
-            <Frame Margin="0, 10, 0, 10" CornerRadius="20" HeightRequest="90" BorderColor="Transparent" InputTransparent="True" Padding="20, 10, 15, 10">
-                <Grid RowDefinitions="*, *" ColumnDefinitions="6*, 4*" ColumnSpacing="10">
 
-                    <Label Text="{Binding IdentificacaoAnimal, StringFormat='Id: {0}'}" 
+            <SwipeView>
+                <SwipeView.RightItems>
+                    <SwipeItems SwipeBehaviorOnInvoked="Close">
+                        <SwipeItemView>
+                            <Frame BorderColor="Transparent" BackgroundColor="LightPink"
+                                   CornerRadius="20" Margin="5"
+                                   WidthRequest="70" Padding="20">
+                                <Image Source="icone_apagar.png" Scale=".6"/>
+                            </Frame>
+                        </SwipeItemView>
+                    </SwipeItems>
+                </SwipeView.RightItems>
+
+                <Frame Margin="0, 10, 0, 10" CornerRadius="20" HeightRequest="90" BorderColor="Transparent" InputTransparent="True" Padding="20, 10, 15, 10">
+                    <Grid RowDefinitions="*, *" ColumnDefinitions="6*, 4*" ColumnSpacing="10">
+
+                        <Label Text="{Binding IdentificacaoAnimal, StringFormat='Id: {0}'}" 
                            TextColor="{StaticResource Primary}"
                            FontFamily="Inter-SemiBold"
                            FontSize="18" 
                            VerticalOptions="Center"/>
 
-                    <Label Text="{Binding NumeroMicrochip, StringFormat='Chip: {0}'}"
+                        <Label Text="{Binding NumeroMicrochip, StringFormat='Chip: {0}'}"
                            TextColor="{StaticResource Primary}"
                            FontFamily="InterRegular"
                            Grid.Row="1" 
                            FontSize="18" 
                            VerticalOptions="Center">
 
-                        <Label.Triggers>
-                            <DataTrigger TargetType="Label" Binding="{Binding NumeroMicrochip}" Value="0">
-                                <Setter Property="Text" Value="Chip: não cadastrado"/>
-                            </DataTrigger>
-                        </Label.Triggers>
+                            <Label.Triggers>
+                                <DataTrigger TargetType="Label" Binding="{Binding NumeroMicrochip}" Value="0">
+                                    <Setter Property="Text" Value="Chip: não cadastrado"/>
+                                </DataTrigger>
+                            </Label.Triggers>
 
-                    </Label>
+                        </Label>
 
-                    <Frame Grid.Column="1" Grid.RowSpan="2" Margin="9" BorderColor="{StaticResource Primary}">
-                        <Image Source="icone_tatu.png" Scale="5"/>
-                    </Frame>
-                    
-                </Grid>
-            </Frame>
+                        <Frame Grid.Column="1" Grid.RowSpan="2" Margin="9" BorderColor="{StaticResource Primary}">
+                            <Image Source="icone_tatu.png" Scale="5"/>
+                        </Frame>
+
+                    </Grid>
+                </Frame>
+            </SwipeView>
         </DataTemplate>
               
     </ContentPage.Resources>
 
     <CollectionView ItemsSource="{Binding Tatus}" 
                     ItemTemplate="{StaticResource ListaDeTatusTemplate}"
-                    SelectionMode="Single"
+                    SelectionMode="None"
                     SelectionChanged="Tatus_SelectionChanged"/>
 
 </ContentPage>
