--- a/TolyID/MVVM/Views/TatuView.xaml
+++ b/TolyID/MVVM/Views/TatuView.xaml
@@ -11,10 +11,10 @@
              BackgroundColor="{StaticResource Background}">
 
     <Shell.TitleView>
-        <Grid ColumnDefinitions="6*, 2*, 2*">
-            <Label Text="{Binding Tatu.IdentificacaoAnimal}" TextColor="White" FontSize="20" FontFamily="Inter-SemiBold" VerticalOptions="Center"/>
-            <Button Grid.Column="1" ImageSource="icone_chip.png" HorizontalOptions="End" BackgroundColor="Transparent" Clicked="Microchip_Clicked"/>
-            <Button Grid.Column="2" ImageSource="icone_mais_branco.png" Scale=".7" HorizontalOptions="End" BackgroundColor="Transparent" Clicked="AdicionarCaptura_Clicked" />
+        <Grid ColumnDefinitions="7*, 1.5*, 1.5*">
+            <Label Text="{Binding Tatu.IdentificacaoAnimal}" TextColor="White" FontSize="20" FontFamily="Inter-Medium" VerticalOptions="Center"/>
+            <Button Grid.Column="1" ImageSource="icone_editar.png" HorizontalOptions="End" BackgroundColor="Transparent" Clicked="Microchip_Clicked"/>
+            <Button Grid.Column="2" ImageSource="icone_adicionar.png" Scale="1.2" HorizontalOptions="End" BackgroundColor="Transparent" Clicked="AdicionarCaptura_Clicked" />
         </Grid>
     </Shell.TitleView>
 
